--- a/Homepage.html
+++ b/Homepage.html
@@ -1,13 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./faviCon.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Govardhana Giri</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="C:\Users\Admin\Desktop\CSPresntation\Newone\exportfo.css">		
+</head>
+<body>
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <Div class="logo"> <img src="C:\Users\Admin\Desktop\CSPresntation\Vardhan2.png" alt="Vardhan" width="400" height="450"> </Div>
+				<Div class="Overlay"> <img src="C:\Users\Admin\Desktop\CSPresntation\stars.png" alt="Vardhan" width="450" height="450"> </Div>
+				<Div class="Overlay1"> <img src="C:\Users\Admin\Desktop\CSPresntation\stars.png" alt="Vardhan" width="275" height="275"> </Div>				
+            </div>
+            <div class="menu">			
+                <ul>
+                    <li><a class="active" href="#h">HOME</a></li>
+                    <li><a href="#a">ABOUT</a></li>
+                    <li><a href="#p">PROJECTS</a></li>
+                    <li><a href="#s">SKILLS</a></li>
+					<li><a href="#e">EDUCATION</a></li>
+                    <li><a href="#c">CONTACT</a></li>				
+                </ul>				
+            </div>            
+        </div> 
+		<marquee class="hanuma" direction="right"><img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Hanuma.png" alt="Hanuma" width="24" height="24"></marquee>
+        <div class="home">
+			<a name="h">
+				<div class="h" id="h"><br><br><br><br><br><br><br>
+					<h2>Hi There, WELCOME</h2><h1>I am <br>GOVARDHANA GIRI</h1>
+						<p> A Senior Technical Lead Specialized in UI/UX Desiging</p>                             
+			</a>
+				</div>
+		</div>
+		<div class="about">
+			<a name="a">
+				<div class="a" id="a"><br><br><br><br><br><br><br><br>
+				<p>I have overall 10+ years of experience in designing, engaging & delightful, 
+				AR/VR,<br> digital, mobile & web product interfaces with focus on UX. 
+				Participated in brainstorming<br>sessions for designing user workflows 
+				& wireframes to produce user-friendly interfaces<br>for various web and 
+				mobile devices with easy navigational visual designsolutions.</p>                            
+			</a>
+				</div>
+        </div>
+		<div class="project">
+			<a name="p">
+				<div class="p" id="p"><br><br><br>
+				<div class="pr1">  
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\vs.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro1.png" alt="Vardhan" width="200" height="150">
+					</a>
+				</div> 
+				<div class="pr2">
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\pg.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro2.png" alt="Vardhan" width="200" height="150"> 
+					</a>
+				</div> 
+				<div class="pr3"> 
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\wm.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro3.png" alt="Vardhan" width="200" height="150">
+					</a>
+				</div> 					
+				<div class="pr4"> 
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\mi.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro4.png" alt="Vardhan" width="200" height="150"> 
+					</a>
+				</div> 
+				<div class="pr5"> 
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\mt.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro5.png" alt="Vardhan" width="200" height="150"> 
+					</a>
+				</div> 
+				<div class="pr6"> 
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\sk.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro6.png" alt="Vardhan" width="200" height="150"> 
+					</a>
+				</div> 
+				<div class="pr7"> 
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\ez.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro7.png" alt="Vardhan" width="200" height="150"> 
+					</a>
+				</div> 
+				<div class="pr8"> 
+					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\pb.png">
+						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro8.png" alt="Vardhan" width="200" height="150"> 
+					</a>	
+				</div> 
+				</div>
+			</a><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		</div>
+		<div class="skill">
+			<a name="s">
+				<div class="s" id="s"><br><br><br><br>
+					<u>Skills:</u>		
+					<p id="sk">	
+					* User Interface Desiging&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* User Experience Desiging&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* User-Centered Designing&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Design Thinking<br>* Double Diamond Methodology
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* User Research Techniques&nbsp;&nbsp;(Qualitative and Quantitative)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Personas<br>* Empathy Mapping&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Affinity Mapping&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					* Information Architecture&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Site Mapping&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* White Boarding<br>* Story Boarding&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* User Journey Mapping&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Low & high-Fedility Wireframming
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Design System<br>* UI Style Guide&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* UI Mock-Up Designing&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Interactive ProtoTyping&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* WCAG&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					* Usability Testing<br>* Heuristic Evaluation&nbsp;&nbsp;&nbsp;&nbsp;* VIMM Model.
+					</p>
+					<u>Tools & Technologies:<br></u>									
+						<div id="ux"> 
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\figma.png" alt="Vardhan" width="80" height="52">
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\figjam.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\sketch.png" alt="Vardhan" width="80" height="52"> 
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\invision.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\balsamiq.png" alt="Vardhan" width="80" height="52"> 
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\lucidchart.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\axurerp.png" alt="Vardhan" width="80" height="52"> 
+						</div>
+						<div id="ad">
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\xd.png" alt="Vardhan" width="80" height="52"><br> 
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\ps.png" alt="Vardhan" width="80" height="52"><br> 
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\illustrator.png" alt="Vardhan" width="80" height="52"> 
+						</div>
+						<div id="bl">
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\blender.png" alt="Vardhan" width="80" height="52"> 
+						</div>
+						<div id="edt">
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\oliveeditor.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\audacity.png" alt="Vardhan" width="80" height="52"> 
+						</div>
+						<div id="gh">
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\github.png" alt="Vardhan" width="80" height="52"> 
+						</div>
+						<div id="te">	
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\html.png" alt="Vardhan" width="80" height="52"><br> 						
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\css.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\js.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\np.png" alt="Vardhan" width="80" height="52"> 
+						</div>					
+				</div>
+			</a><br><br><br><br><br><br><br><br><br><br><br><br>
+		</div>
+		<div class="educat">
+			<a name="e">
+				<div class="e" id="e"><br><br><br><br><br><br><br>
+	<u id="hd">Education:</u>		
+		<h5>Master of Computer Applications 2010-2013</h5>
+			<h6>G. Pulla Reddy Engineering College (autonomous), Karnool, Andhra Pradesh<br>
+			Jawaharlal Nehru Technological University, Ananthapuram, Andhra Pradesh
+			<h6>
+			
+		<h5>Bachelor of Computer Science 2007-2010</h5>
+			<h6>S.V Degree & PG College, Ananthapuram, Andhra Pradesh<br>
+			Sri Krishnadevaraya University, Ananthapuram, Andhra Pradesh						
+			</h6>
+			
+	<u id="hd">Languages:</u><br><br>
+				<b>Telugu</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Read&nbsp;&nbsp;&nbsp;&nbsp;Write&nbsp;&nbsp;&nbsp;&nbsp;Speak<br>		
+				<b>English</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Read&nbsp;&nbsp;&nbsp;&nbsp;Write&nbsp;&nbsp;&nbsp;&nbsp;Speak<br>	
+				<b>Hindi</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Read&nbsp;&nbsp;&nbsp;&nbsp;Write&nbsp;&nbsp;&nbsp;&nbsp;Speak<br>
+				</div>
+			</a><br><br><br><br><br><br>
+		</div>
+		<div class="contac">			
+			<a name="c">
+				<div class="c" id="c"><br><br>
+				<h1 id="ty"> Thank You :)</h1>
+						<u><h2>Lets Connect:</h2></u>
+					<form>
+						<div class="inputbox">
+							<input type="text" name="" placeholder="Type your name">
+						</div>
+							<div class="inputbox">
+								<input type="email" name="" placeholder="Type your e-mail">
+							</div>
+						<div class="ibox">
+							<textarea name="message" placeholder="Type your message"></textarea>	
+						</div>
+						<div class="btn">
+							<button Type="submit">SEND</button>
+						</div>
+					</form><br>
+					<div  id="ci">
+						<h2><u>Contact Information:</u></h2>
+						<p class="cn">
+							E-Mail: v.govardhana@gmail.com<br>
+							Phone : +91 9849017183<br>
+							<a "href="C:\Users\Admin\Desktop\CSPresntation\Newone\CV.pdf" download='image' class="download">CV<i class="fa fa-download"></i></a> <br><br>
+						</p>
+					</div>
+				</div>
+			</a><br><br>
+		</div>
+    </div>
+</body>
 </html>
