--- a/Homepage.html
+++ b/Homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Portfolio</title>
-    <link rel="stylesheet" href="C:\Users\Admin\Desktop\CSPresntation\Newone\exportfo.css">		
+    <link rel="stylesheet" href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/eb03508c83eb7106a068facdcc03e4dc83047048/Homepage.css">		
 </head>
 <body>
     <div class="main">
