--- a/Homepage.html
+++ b/Homepage.html
@@ -9,8 +9,8 @@
         <div class="navbar">
             <div class="icon">
                 <Div class="logo"> <img src="C:\Users\Admin\Desktop\CSPresntation\Vardhan2.png" alt="Vardhan" width="400" height="450"> </Div>
-				<Div class="Overlay"> <img src="C:\Users\Admin\Desktop\CSPresntation\stars.png" alt="Vardhan" width="450" height="450"> </Div>
-				<Div class="Overlay1"> <img src="C:\Users\Admin\Desktop\CSPresntation\stars.png" alt="Vardhan" width="275" height="275"> </Div>				
+				<Div class="Overlay"> <img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/stars.png" alt="Vardhan" width="450" height="450"> </Div>
+				<Div class="Overlay1"> <img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/stars.png" alt="Vardhan" width="275" height="275"> </Div>				
             </div>
             <div class="menu">			
                 <ul>
@@ -23,7 +23,7 @@
                 </ul>				
             </div>            
         </div> 
-		<marquee class="hanuma" direction="right"><img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Hanuma.png" alt="Hanuma" width="24" height="24"></marquee>
+		<marquee class="hanuma" direction="right"><img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Hanuma.png" alt="Hanuma" width="24" height="24"></marquee>
         <div class="home">
 			<a name="h">
 				<div class="h" id="h"><br><br><br><br><br><br><br>
@@ -47,43 +47,43 @@
 			<a name="p">
 				<div class="p" id="p"><br><br><br>
 				<div class="pr1">  
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\vs.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro1.png" alt="Vardhan" width="200" height="150">
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/vs.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro1.png" alt="Vardhan" width="200" height="150">
 					</a>
 				</div> 
 				<div class="pr2">
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\pg.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro2.png" alt="Vardhan" width="200" height="150"> 
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/pg.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro2.png" alt="Vardhan" width="200" height="150"> 
 					</a>
 				</div> 
 				<div class="pr3"> 
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\wm.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro3.png" alt="Vardhan" width="200" height="150">
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/wm.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro3.png" alt="Vardhan" width="200" height="150">
 					</a>
 				</div> 					
 				<div class="pr4"> 
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\mi.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro4.png" alt="Vardhan" width="200" height="150"> 
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/mi.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro4.png" alt="Vardhan" width="200" height="150"> 
 					</a>
 				</div> 
 				<div class="pr5"> 
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\mt.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro5.png" alt="Vardhan" width="200" height="150"> 
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/mt.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro5.png" alt="Vardhan" width="200" height="150"> 
 					</a>
 				</div> 
 				<div class="pr6"> 
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\sk.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro6.png" alt="Vardhan" width="200" height="150"> 
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/sk.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro6.png" alt="Vardhan" width="200" height="150"> 
 					</a>
 				</div> 
 				<div class="pr7"> 
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\ez.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro7.png" alt="Vardhan" width="200" height="150"> 
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/ez.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro7.png" alt="Vardhan" width="200" height="150"> 
 					</a>
 				</div> 
 				<div class="pr8"> 
-					<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\pb.png">
-						<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro8.png" alt="Vardhan" width="200" height="150"> 
+					<a href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/pb.png">
+						<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/Pro8.png" alt="Vardhan" width="200" height="150"> 
 					</a>	
 				</div> 
 				</div>
@@ -102,34 +102,34 @@
 					</p>
 					<u>Tools & Technologies:<br></u>									
 						<div id="ux"> 
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\figma.png" alt="Vardhan" width="80" height="52">
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\figjam.png" alt="Vardhan" width="80" height="52"><br>
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\sketch.png" alt="Vardhan" width="80" height="52"> 
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\invision.png" alt="Vardhan" width="80" height="52"><br>
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\balsamiq.png" alt="Vardhan" width="80" height="52"> 
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\lucidchart.png" alt="Vardhan" width="80" height="52"><br>
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\axurerp.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/figma.png" alt="Vardhan" width="80" height="52">
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/figjam.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/sketch.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/invision.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/balsamiq.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/lucidchart.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/axurerp.png" alt="Vardhan" width="80" height="52"> 
 						</div>
 						<div id="ad">
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\xd.png" alt="Vardhan" width="80" height="52"><br> 
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\ps.png" alt="Vardhan" width="80" height="52"><br> 
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\illustrator.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/xd.png" alt="Vardhan" width="80" height="52"><br> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/ps.png" alt="Vardhan" width="80" height="52"><br> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/illustrator.png" alt="Vardhan" width="80" height="52"> 
 						</div>
 						<div id="bl">
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\blender.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/blender.png" alt="Vardhan" width="80" height="52"> 
 						</div>
 						<div id="edt">
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\oliveeditor.png" alt="Vardhan" width="80" height="52"><br>
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\audacity.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/oliveeditor.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/audacity.png" alt="Vardhan" width="80" height="52"> 
 						</div>
 						<div id="gh">
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\github.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/github.png" alt="Vardhan" width="80" height="52"> 
 						</div>
 						<div id="te">	
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\html.png" alt="Vardhan" width="80" height="52"><br> 						
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\css.png" alt="Vardhan" width="80" height="52"><br>
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\js.png" alt="Vardhan" width="80" height="52"><br>
-							<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\np.png" alt="Vardhan" width="80" height="52"> 
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/html.png" alt="Vardhan" width="80" height="52"><br> 						
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/css.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/js.png" alt="Vardhan" width="80" height="52"><br>
+							<img src="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/np.png" alt="Vardhan" width="80" height="52"> 
 						</div>					
 				</div>
 			</a><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -179,7 +179,7 @@
 						<p class="cn">
 							E-Mail: v.govardhana@gmail.com<br>
 							Phone : +91 9849017183<br>
-							<a "href="C:\Users\Admin\Desktop\CSPresntation\Newone\CV.pdf" download='image' class="download">CV<i class="fa fa-download"></i></a> <br><br>
+							<a "href="https://github.com/GoVardhanGB/ItsGovardhanaGiri-s/blob/725e83829c2afc9a50f0490c5473568e393c7e27/WebCon/CV.pdf" download='image' class="download">CV<i class="fa fa-download"></i></a> <br><br>
 						</p>
 					</div>
 				</div>
