--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,9 @@
         </div> <br><br><br><br><br>
 		<!--Icon & Logo--!>
 				<div class="icon">
-					<Div class="logo"> <img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Vardhan2.png" alt="Vardhan" width="400" height="450"> </Div>	
-					<Div class="Overlay"> <img src="C:\Users\Admin\Desktop\CSPresntation\stars.png" alt="Vardhan" width="450" height="450"> </Div>
-					<Div class="Overlay1"> <img src="C:\Users\Admin\Desktop\CSPresntation\stars.png" alt="Vardhan" width="275" height="275"> </Div>	
+					<Div class="logo"> <img src="WebCon/Vardhan2.png" alt="Vardhan" width="400" height="450"> </Div>	
+					<Div class="Overlay"> <img src="WebCon/stars.png" alt="Vardhan" width="450" height="450"> </Div>
+					<Div class="Overlay1"> <img src="WebCon/stars.png" alt="Vardhan" width="275" height="275"> </Div>	
 				</div>		
 		<!--Home Page--!>
 				<div class="home">
@@ -55,35 +55,35 @@
 					<a name="p">
 						<div class="p" id="p"><br><br><br>		
 							<div class="pr1">        
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro1.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/vs.png')">
+								<img src="WebCon/Pro1.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/vs.png')">
 							<div class="txt">AR/VR Virtual Store View</div>
 							</div>
 							<div class="pr2">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro2.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/pg.png')">
+								<img src="WebCon/Pro2.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/pg.png')">
 								<div class="txt">AR/VR Planogram View</div>
 							</div>
 							<div class="pr3">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro3.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/wm.png')">
+								<img src="WebCon/Pro3.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/wm.png')">
 								<div class="txt">AR/VR WindMill View</div>
 							</div>
 							<div class="pr4">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro4.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/mi.png')">
+								<img src="WebCon/Pro4.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/mi.png')">
 								<div class="txt">Minerva IoT View</div>
 							</div>
 							<div class="pr5">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro5.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/mt.png')">
+								<img src="WebCon/Pro5.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/mt.png')">
 								<div class="txt">MedTell View</div>
 							</div>
 							<div class="pr6">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro6.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/sk.png')">
+								<img src="WebCon/Pro6.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/sk.png')">
 								<div class="txt">StoreKing View</div>
 							</div>
 							<div class="pr7">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro7.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/ez.png')">
+								<img src="WebCon/Pro7.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/ez.png')">
 								<div class="txt">EZ Event View</div>
 							</div>
 							<div class="pr8">
-								<img src="C:\Users\Admin\Desktop\CSPresntation\Newone\Pro8.png" alt="Vardhan" style="width:200px" onclick="openPopup('file:///C:/Users/Admin/Desktop/CSPresntation/Newone/pb.png')">
+								<img src="WebCon/Pro8.png" alt="Vardhan" style="width:200px" onclick="openPopup('WebCon/pb.png')">
 								<div class="txt">Patient Billing View</div>
 							</div>
 					
@@ -131,24 +131,24 @@
 										* Usability Testing<br>* Heuristic Evaluation&nbsp;&nbsp;&nbsp;&nbsp;* VIMM Model.
 									</p>
 								<u>Tools & Technologies:<br></u><br>
-								<img class="figma" src="C:\Users\Admin\Desktop\CSPresntation\Newone\figma.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;								
-								<img class="figjam" src="C:\Users\Admin\Desktop\CSPresntation\Newone\figjam.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="xd" src="C:\Users\Admin\Desktop\CSPresntation\Newone\xd.png" alt="Vardhan" style="width:80px"> &nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="oliveeditor" src="C:\Users\Admin\Desktop\CSPresntation\Newone\oliveeditor.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="blender" src="C:\Users\Admin\Desktop\CSPresntation\Newone\blender.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp; 						
-								<img class="github" src="C:\Users\Admin\Desktop\CSPresntation\Newone\github.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp; 						
-								<img class="html" src="C:\Users\Admin\Desktop\CSPresntation\Newone\html.png" alt="Vardhan" style="width:80px"><br> 						
-								<img class="sketch" src="C:\Users\Admin\Desktop\CSPresntation\Newone\sketch.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;
-								<img class="invision" src="C:\Users\Admin\Desktop\CSPresntation\Newone\invision.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="ps" src="C:\Users\Admin\Desktop\CSPresntation\Newone\ps.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="audacity" src="C:\Users\Admin\Desktop\CSPresntation\Newone\audacity.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-								<img class="css" src="C:\Users\Admin\Desktop\CSPresntation\Newone\css.png" alt="Vardhan" style="width:80px"><br>
-								<img class="balsamiq" src="C:\Users\Admin\Desktop\CSPresntation\Newone\balsamiq.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp; 
-								<img class="lucidchart" src="C:\Users\Admin\Desktop\CSPresntation\Newone\lucidchart.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="illustrator" src="C:\Users\Admin\Desktop\CSPresntation\Newone\illustrator.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-								<img class="js" src="C:\Users\Admin\Desktop\CSPresntation\Newone\js.png" alt="Vardhan" style="width:80px"><br>
-								<img class="axurerp" src="C:\Users\Admin\Desktop\CSPresntation\Newone\axurerp.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	
-								<img class="np" src="C:\Users\Admin\Desktop\CSPresntation\Newone\np.png" alt="Vardhan" style="width:80px"> 					
+								<img class="figma" src="WebCon/figma.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;								
+								<img class="figjam" src="WebCon/figjam.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="xd" src="WebCon/xd.png" alt="Vardhan" style="width:80px"> &nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="oliveeditor" src="WebCon/oliveeditor.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="blender" src="WebCon/blender.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp; 						
+								<img class="github" src="WebCon/github.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp; 						
+								<img class="html" src="WebCon/Newone\html.png" alt="Vardhan" style="width:80px"><br> 						
+								<img class="sketch" src="WebCon/sketch.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;
+								<img class="invision" src="WebCon/invision.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="ps" src="WebCon/ps.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="audacity" src="WebCon/Newone\audacity.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+								<img class="css" src="WebCon/css.png" alt="Vardhan" style="width:80px"><br>
+								<img class="balsamiq" src="WebCon/balsamiq.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp; 
+								<img class="lucidchart" src="WebCon/lucidchart.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="illustrator" src="WebCon/illustrator.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								<img class="js" src="WebCon/js.png" alt="Vardhan" style="width:80px"><br>
+								<img class="axurerp" src="WebCon/axurerp.png" alt="Vardhan" style="width:80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	
+								<img class="np" src="WebCon/np.png" alt="Vardhan" style="width:80px"> 					
 							</a><br><br><br><br><br><br><br><br><br>
 						</div>							
 				</div>		
@@ -199,7 +199,7 @@
 										<b>E-Mail:</b> v.govardhana@gmail.com<br>
 										<b>Phone :</b> (+91) 9849017183<br>
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(+91) 7382435054<br>
-								<a href="C:\Users\Admin\Desktop\CSPresntation\Newone\CV.pdf" target="_blank" download='pdf' class="download">View My CV</a> <br><br>						
+								<a href="WebCon/CV.pdf" target="_blank" download='pdf' class="download">View My CV</a> <br><br>						
 								</div>
 						</div>
 					</a><br><br>
