--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ project {
 					I Have Over 10+ Years of Experience in Crafting Intuitive User Experiences, Expertised in finding User-Centric <br>
 					Solutions & Design Systems.
 					<br><br><br>					
-					<a href="WebCon/CV.pdf" target="_blank" download='pdf' class="download">My CV</a><br><br><br><br><br><br><br><br><br>
+					<a href="WebCon/CV.pdf" target="_blank" download='Govardhana Giri V_UI/UX Designer' class="download">My CV</a><br><br><br><br><br><br><br><br><br>
 					<br><br>
 		</div>
 			</a>
